fastrace/tests/snapshots/lib__multiple_local_parent.snap
---
source: fastrace/tests/lib.rs
expression: graph
---
root []
    span1 []
        span2 []
            span3 []
        span4 []
