fastrace/tests/snapshots/lib__single_thread_multiple_spans_expected_graph2.snap
---
source: fastrace/tests/lib.rs
expression: graph2
---
root2 []
    iter-span-0 [("tmp_property", "tmp_value")]
    iter-span-1 [("tmp_property", "tmp_value")]
    rec-span []
        rec-span []
